lien page accueil

--- a/filmoteca.html
+++ b/filmoteca.html
@@ -1,11 +1,13 @@
 <html>
     <head>
         <title>Page d'accueil </title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1> FILMOTECA </h1>
         <div class="onglets">
-            <button onclick="filmoteca.html"> Page d'accueil</button>
+            <a href="file:///C:/Users/henac/Desktop/inf5/filmoteca.html">
+            <button> Page d'accueil</button></a>
             <button> Films</button>
             <button> Avis </button>
         </div>
