--- a/filmoteca.html
+++ b/filmoteca.html
@@ -13,16 +13,16 @@
         </div>
         <p> Liste des films </p> 
         <figure>
-        <img src="img1.jpg" >
-        <figcaption>Nom du film 1</figcaption>
-        <img src="img2.jpg">
-        <figcaption> Nom film 2 </figcaption>
-        <img src="img3.jpg">
-        <figcaption> Nom film 3</figcaption>
-        <img src="img4.jpg">
-        <figcaption> Nom film 4 </figcaption>
-        <img src="img5.jpg">
-        <figcaption> Nom film 5 </figcaption>
+        <img src="C:\Users\henac\Desktop\img1.jpeg" class="img" >
+        <figcaption>LES PETITES VICTOIRES</figcaption>
+        <img src="C:\Users\henac\Desktop\img2.jpeg" class="img">
+        <figcaption> WONKA </figcaption>
+        <img src="C:\Users\henac\Desktop\img3.jpeg" class="img">
+        <figcaption> AVATAR</figcaption>
+        <img src="C:\Users\henac\Desktop\img4.jpeg" class="img">
+        <figcaption> L'AMOUR OUF </figcaption>
+        <img src="C:\Users\henac\Desktop\img5.jpeg" class="img">
+        <figcaption> JOKER </figcaption>
         </figure>
     </body>
 </html>
