--- a/filmoteca.html
+++ b/filmoteca.html
@@ -8,7 +8,8 @@
         <div class="onglets">
             <a href="file:///C:/Users/henac/Desktop/inf5/filmoteca.html">
             <button> Page d'accueil</button></a>
-            <button> Films</button>
+            <a href="films.html">
+            <button> Films à ajouter</button></a>
             <button> Avis </button>
         </div>
         <p> Liste des films </p> 
