--- a/films.html
+++ b/films.html
@@ -1,8 +1,16 @@
 <html>
     <head>
         <title> Ajout de films </title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="onglets">
+            <a href="file:///C:/Users/henac/Desktop/inf5/filmoteca.html">
+            <button> Page d'accueil</button></a>
+            <a href="films.html">
+            <button> Films à ajouter</button></a>
+            <button> Avis </button>
+        </div>
         <h1> Ajout d'un film </h1>
         <form>
             <label for="nom">Nom du film : </label>
