--- a/filmoteca.html
+++ b/filmoteca.html
@@ -3,8 +3,8 @@
         <title>Page d'accueil </title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
-        <h1> FILMOTECA </h1>
+    <body style="background-color:bisque;">
+        <h1 style="text-align: center; color:brown; "> FILMOTECA </h1>
         <div class="onglets">
             <a href="file:///C:/Users/henac/Desktop/inf5/filmoteca.html">
             <button> Page d'accueil</button></a>
@@ -13,17 +13,23 @@
             <button> Avis </button>
         </div>
         <p> Liste des films </p> 
+        <div class="image">
         <figure>
         <img src="C:\Users\henac\Desktop\img1.jpeg" class="img" >
         <figcaption>LES PETITES VICTOIRES</figcaption>
+        <br><br>
         <img src="C:\Users\henac\Desktop\img2.jpeg" class="img">
         <figcaption> WONKA </figcaption>
+        <br><br>
         <img src="C:\Users\henac\Desktop\img3.jpeg" class="img">
         <figcaption> AVATAR</figcaption>
+        <br><br>
         <img src="C:\Users\henac\Desktop\img4.jpeg" class="img">
         <figcaption> L'AMOUR OUF </figcaption>
+        <br><br>
         <img src="C:\Users\henac\Desktop\img5.jpeg" class="img">
         <figcaption> JOKER </figcaption>
         </figure>
+        </div>
     </body>
 </html>
